[package]
name = "web-images-napi"
version = "0.0.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
napi-sys-dev = "0.0.3"
libc = "^0.2"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
image = "^0.22"
imageproc = "^0.19"
colourado = "^0.2"
